--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   <br>
   <hr>
   <br>
-  <a href="C:\Users\Saket Khodaskar\OneDrive - Acidaes Solutions Pvt Ltd\Desktop\CRMNEXT\Udemy\Web Development Material\Web Development Codes\HTML - Perosnal Site\My Hobbies.html">My Hobbies</a>
+  <a href="My Hobbies.html">My Hobbies</a>
   <br>
   <br>
-  <a href="C:\Users\Saket Khodaskar\OneDrive - Acidaes Solutions Pvt Ltd\Desktop\CRMNEXT\Udemy\Web Development Material\Web Development Codes\HTML - Perosnal Site\Contact Details.html">Contact Me</a>
+  <a href="Contact Details.html">Contact Me</a>
 
 </body>
 
