--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <br>
   <hr>
   <br>
-  <a href="https://github.com/SaketK7/Saket-Website1/blob/main/My%20Hobbies.html">My Hobbies</a>
+  <a href="My Hobbies.html">My Hobbies</a>
   <br>
   <br>
   <a href="Contact Details.html">Contact Me</a>
